--- a/apps.json
+++ b/apps.json
@@ -1,1 +1,14 @@
-[]
+[
+{ "id": "tsoy_launcher",
+  "name": "Tsoy Launcher",
+  "shortName":"Tsoy Launcher",
+  "icon": "app.png",
+  "version":"0.01",
+  "description": "Keine Beschreibung notwendig",
+  "tags": "",
+  "storage": [
+    {"name":"tsoy_launcher.app.js","url":"app.js"},
+    {"name":"tsoy_launcher.img","url":"app-icon.js","evaluate":true}
+  ]
+}
+]
