--- a/apps.json
+++ b/apps.json
@@ -1,6 +1,5 @@
 [{ "id": "tsoy_launcher",
   "name": "Tsoy Launcher",
-  "shortName":"Tsoy Launcher",
   "icon": "app.png",
   "version":"0.01",
   "description": "Keine Beschreibung notwendig",
@@ -13,7 +12,7 @@
 { "id": "locale",
   "name": "Languages",
   "icon": "../unknown.png",
-  "version":"0.00",
+  "version":"0.07",
   "description": "",
   "tags": "",
   "storage": [
@@ -21,55 +20,21 @@
 },
   { "id": "boot",
     "name": "Bootloader",
-    "icon": "bootloader.png",
+    "icon": "../unknown.png",
     "version":"0.19",
-    "description": "This is needed by Bangle.js to automatically load the clock, menu, widgets and settings",
+    "description": "",
     "tags": "tool,system",
-    "type":"bootloader",
     "storage": [
-      {"name":".boot0","url":"boot0.js"},
-      {"name":".bootcde","url":"bootloader.js"}
-    ],
-    "sortorder" : -10
-  },
-  { "id": "moonphase",
-    "name": "Moonphase",
-    "icon": "app.png",
-    "version":"0.02",
-    "description": "Shows current moon phase. Now with GPS function.",
-    "tags": "",
-    "allow_emulator":true,
-    "storage": [
-      {"name":"moonphase.app.js","url":"app.js"},
-      {"name":"moonphase.img","url":"app-icon.js","evaluate":true}
-    ]
-  },
-  { "id": "daysl",
-    "name": "Days left",
-    "icon": "app.png",
-    "version":"0.03",
-    "description": "Shows you the days left until a certain date. Date can be set with a settings app and is written to a file.",
-    "tags": "",
-    "allow_emulator":false,
-    "storage": [
-        {"name":"daysl.app.js","url":"app.js"},
-        {"name":"daysl.img","url":"app-icon.js","evaluate":true},
-        {"name":"daysl.wid.js","url":"widget.js"}
     ]
   },
   { "id": "launch",
     "name": "Launcher (Default)",
-    "shortName":"Launcher",
-    "icon": "app.png",
+    "icon": "../unknown.png",
     "version":"0.04",
     "description": "This is needed by Bangle.js to display a menu allowing you to choose your own applications. You can replace this with a customised launcher.",
-    "tags": "tool,system,launcher",
-    "type":"launch",
+    "tags": "",
     "storage": [
-      {"name":"launch.app.js","url":"app.js"}
-    ],
-    "sortorder" : -10
-  },
+    ]},
   { "id": "about",
     "name": "About",
     "icon": "app.png",
