--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,7 @@
 },
 { "id": "locale",
   "name": "Languages",
-  "icon": "../unknown.png",
+  "icon": "../bangle.png",
   "version":"0.07",
   "description": "",
   "tags": "",
@@ -20,16 +20,16 @@
 },
   { "id": "boot",
     "name": "Bootloader",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.19",
-    "description": "",
+    "description": "This is needed by Bangle.js to automatically load the clock, menu, widgets and settings",
     "tags": "tool,system",
     "storage": [
     ]
   },
   { "id": "launch",
     "name": "Launcher (Default)",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.04",
     "description": "This is needed by Bangle.js to display a menu allowing you to choose your own applications. You can replace this with a customised launcher.",
     "tags": "",
@@ -37,7 +37,7 @@
     ]},
   { "id": "about",
     "name": "About",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.06",
     "description": "Bangle.js About page - showing software version, stats, and a collaborative mural from the Bangle.js KickStarter backers",
     "tags": "tool,system",
@@ -74,7 +74,7 @@
   },
   { "id": "welcome",
     "name": "Welcome",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.09",
     "description": "Appears at first boot and explains how to use Bangle.js",
     "tags": "start,welcome",
@@ -91,7 +91,7 @@
   },
   { "id": "gbridge",
     "name": "Gadgetbridge",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.17",
     "description": "The default notification handler for Gadgetbridge notifications from Android",
     "tags": "tool,system,android,widget",
@@ -137,7 +137,7 @@
   { "id": "alarm",
     "name": "Default Alarm",
     "shortName":"Alarms",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.10",
     "description": "Set and respond to alarms",
     "tags": "tool,alarm,widget",
@@ -168,7 +168,7 @@
   { "id": "imgclock",
     "name": "Image background clock",
     "shortName":"Image Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.07",
     "description": "A clock with an image as a background",
     "tags": "clock",
@@ -292,7 +292,7 @@
   { "id": "openloc",
     "name": "Open Location / Plus Codes",
     "shortName": "Open Location",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Convert your current GPS location to a series of characters",
     "tags": "tool,outdoors,gps",
@@ -314,7 +314,7 @@
   },
   { "id": "gpsrec",
     "name": "GPS Recorder",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.12",
     "interface": "interface.html",
     "description": "Application that allows you to record a GPS track. Can run in background",
@@ -345,7 +345,7 @@
   },
   { "id": "heart",
     "name": "Heart Rate Recorder",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "interface": "interface.html",
     "description": "Application that allows you to record your heart rate. Can run in background",
@@ -572,7 +572,7 @@
   },
   { "id": "qrcode",
     "name": "Custom QR Code",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "Use this to upload a customised QR code to Bangle.js",
     "tags": "qrcode",
@@ -584,7 +584,7 @@
   },
   { "id": "beer",
     "name": "Beer Compass",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Uploads all the pubs in an area onto your watch, so it can always point you at the nearest one",
     "tags": "",
@@ -596,7 +596,7 @@
   },
   { "id": "route",
     "name": "Route Viewer",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Upload a KML file of a route, and have your watch display a map with how far around it you are",
     "tags": "",
@@ -830,7 +830,7 @@
   },
   { "id": "flappy",
     "name": "Flappy Bird",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.04",
     "description": "A Flappy Bird game clone",
     "tags": "game",
@@ -932,7 +932,7 @@
   },
   { "id": "ctrclk",
     "name": "Centerclock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "Watch-centered digital 24h clock with date in dd.mm.yyyy format.",
     "tags": "clock",
@@ -945,7 +945,7 @@
   },
   { "id": "demoapp",
     "name": "Demo Loop",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Simple demo app - displays Bangle.js, JS logo, graphics, and Bangle.js information",
     "tags": "",
@@ -959,7 +959,7 @@
   },
   { "id": "flagrse",
     "name": "Espruino Flag Raiser",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "readme": "README.md",
     "description": "App to send a command to another Espruino to cause it to raise a flag",
@@ -972,7 +972,7 @@
   {
     "id": "pipboy",
     "name": "Pipboy",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version": "0.03",
     "description": "Pipboy themed clock",
     "tags": "clock",
@@ -986,7 +986,7 @@
   { "id": "torch",
     "name": "Torch",
     "shortName":"Torch",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "Turns screen white to help you see in the dark. Select from the launcher or press BTN1,BTN3,BTN1,BTN3 quickly to start when in any app that shows widgets",
     "tags": "tool,torch",
@@ -998,7 +998,7 @@
   },
   { "id": "wohrm",
     "name": "Workout HRM",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.07",
     "readme": "README.md",
     "description": "Workout heart rate monitor notifies you with a buzz if your heart rate goes above or below the set limits.",
@@ -1053,7 +1053,7 @@
   { "id": "cliock",
     "name": "Commandline-Clock",
     "shortName":"CLI-Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.08",
     "description": "Simple CLI-Styled Clock",
     "tags": "clock,cli,command,bash,shell",
@@ -1159,7 +1159,7 @@
   { "id": "toucher",
     "name": "Touch Launcher",
     "shortName":"Toucher",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.06",
     "description": "Touch enable left to right launcher.",
     "tags": "tool,system,launcher",
@@ -1176,7 +1176,7 @@
   {
     "id": "balltastic",
     "name": "Balltastic",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version": "0.01",
     "description": "Simple but fun ball eats dots game.",
     "tags": "game,fun",
@@ -1227,7 +1227,7 @@
   { "id": "openstmap",
     "name": "OpenStreetMap",
     "shortName":"OpenStMap",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.03",
     "description": "[BETA] Loads map tiles from OpenStreetMap onto your Bangle.js and displays a map of where you are",
     "tags": "outdoors,gps",
@@ -1240,7 +1240,7 @@
   { "id": "activepedom",
     "name": "Active Pedometer",
     "shortName":"Active Pedometer",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.04",
     "description": "Pedometer that filters out arm movement and displays a step goal progress. Steps are saved to a daily file and can be viewed as graph.",
     "tags": "outdoors,widget",
@@ -1255,7 +1255,7 @@
   { "id": "chronowid",
     "name": "Chrono Widget",
     "shortName":"Chrono Widget",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.03",
     "description": "Chronometer (timer) which runs as widget.",
     "tags": "tools,widget",
@@ -1293,7 +1293,7 @@
   { "id": "devstopwatch",
   "name": "Dev Stopwatch",
   "shortName":"Dev Stopwatch",
-  "icon": "../unknown.png",
+  "icon": "../bangle.png",
   "version":"0.01",
   "description": "Stopwatch with 5 laps supported (cyclically replaced)",
   "tags": "stopwatch, chrono, timer, chronometer",
@@ -1306,7 +1306,7 @@
   { "id": "batchart",
     "name": "Battery Chart",
     "shortName":"Battery Chart",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.10",
     "readme": "README.md",
     "description": "A widget and an app for recording and visualizing battery percentage over time.",
@@ -1391,7 +1391,7 @@
     "id": "dane",
     "name": "Digital Assistant, not EDITH",
     "shortName": "DANE",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version": "0.07",
     "description": "A Watchface inspired by Tony Stark's EDITH",
     "tags": "clock",
@@ -1490,7 +1490,7 @@
   { "id": "hidcam",
     "name": "Camera shutter",
     "shortName":"Cam shutter",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.03",
     "description": "Enable HID, connect to your phone, start your camera and trigger the shot on your Bangle",
     "readme": "README.md",
@@ -1504,7 +1504,7 @@
     "id": "rclock",
     "name": "Round clock with seconds,  minutes and date",
     "shortName":"Round Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.03",
     "description": "Designed round clock with ticks for minutes and seconds and heart rate indication",
     "tags": "clock",
@@ -1517,7 +1517,7 @@
   { "id": "hamloc",
     "name": "QTH Locator / Maidenhead Locator System",
     "shortName": "QTH Locator",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Convert your current GPS location to the Maidenhead locator system used by HAM amateur radio operators",
     "tags": "tool,outdoors,gps",
@@ -1529,7 +1529,7 @@
   },
   { "id": "osmpoi",
     "name": "POI Compass",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.03",
     "description": "Uploads all the points of interest in an area onto your watch, same as Beer Compass with more p.o.i.",
     "tags": "tool,outdoors,gps",
@@ -1594,7 +1594,7 @@
   { "id": "hidjoystick",
     "name": "Bluetooth Joystick",
     "shortName": "Joystick",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Emulates a 2 axis/5 button Joystick using the accelerometer as stick input and buttons 1-3, touch left as button 4 and touch right as button 5.",
     "tags": "bluetooth",
@@ -1635,7 +1635,7 @@
   { "id": "smtswch",
     "name": "Smart Switch",
     "shortName":"Smart Switch",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Using EspruinoHub, control your smart devices on and off via Bluetooth Low Energy!",
     "tags": "bluetooth,btle,smart,switch",
@@ -1653,7 +1653,7 @@
   { "id": "miplant",
     "name": "Xiaomi Plant Sensor",
     "shortName":"Mi Plant",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Reads and displays data from Xiaomi bluetooth plant moisture sensors",
     "tags": "xiaomi,mi,plant,ble,bluetooth",
@@ -1665,7 +1665,7 @@
   {
     "id": "simpletimer",
     "name": "Timer",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version": "0.04",
     "description": "Simple timer, useful when playing board games or cooking",
     "tags": "timer",
@@ -1715,7 +1715,7 @@
   { "id": "findphone",
     "name": "Find Phone",
     "shortName":"Find Phone",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Find your phone via Gadgetbridge. Click any button to let your phone ring. 📳",
     "tags": "tool,android",
@@ -1729,7 +1729,7 @@
   { "id": "getup",
     "name": "Get Up",
     "shortName":"Get Up",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Reminds you to getup every x minutes. Sitting to long is dangerous!",
     "tags": "tools,health",
@@ -1791,7 +1791,7 @@
     "id": "jbm8b",
     "name": "Magic 8 Ball",
     "shortName": "Magic 8 Ball",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "description": "A simple fortune telling app",
     "tags": "game",
     "version": "0.03",
@@ -1829,7 +1829,7 @@
   { "id": "binclock",
     "name": "Binary Clock",
     "shortName":"Binary Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "A binary clock with hours and minutes. BTN1 toggles a digital clock.",
     "tags": "clock,binary",
@@ -1856,7 +1856,7 @@
   { "id": "animclk",
     "name": "Animated Clock",
     "shortName":"Anim Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "An animated clock face using Mark Ferrari's amazing 8 bit game art and palette cycling: http://www.markferrari.com/art/8bit-game-art",
     "tags": "clock,animated",
@@ -1872,7 +1872,7 @@
   { "id": "analogimgclk",
     "name": "Analog Clock (Image background)",
     "shortName":"Analog Clock",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.02",
     "description": "An analog clock with an image background",
     "tags": "clock",
@@ -1887,7 +1887,7 @@
     "id": "verticalface",
     "name": "Vertical watch face",
     "shortName":"Vertical Face",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.05",
     "description": "A simple vertical watch face with the date.",
     "tags": "clock",
@@ -1901,7 +1901,7 @@
   { "id": "sleepphasealarm",
     "name": "SleepPhaseAlarm",
     "shortName":"SleepPhaseAlarm",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Uses the accelerometer to estimate sleep and wake states with the principle of Estimation of Stationary Sleep-segments (ESS, see https://ubicomp.eti.uni-siegen.de/home/datasets/ichi14/index.html.en). This app will read the next alarm from the alarm application and will wake you up to 30 minutes early at the best guessed time when you are almost already awake.",
     "tags": "alarm",
@@ -1938,7 +1938,7 @@
   { "id": "gpspoilog",
     "name": "GPS POI Logger",
     "shortName":"GPS POI Log",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "A simple app to log points of interest with their GPS coordinates and read them back onto your PC. Based on the https://www.espruino.com/Bangle.js+Storage tutorial",
     "tags": "outdoors",
@@ -1992,7 +1992,7 @@
   { "id": "espruinoctrl",
     "name": "Espruino Control",
     "shortName":"Espruino Ctrl",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Send commands to other Espruino devices via the Bluetooth UART interface. Customisable commands!",
     "tags": "",
@@ -2038,7 +2038,7 @@
   { "id": "accelrec",
     "name": "Acceleration Recorder",
     "shortName":"Accel Rec",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "interface": "interface.html",
     "description": "This app puts the Bangle's accelerometer into 100Hz mode and reads 2 seconds worth of data after movement starts. The data can then be exported back to the PC.",
@@ -2080,7 +2080,7 @@
   { "id": "osgridref",
     "name": "Ordnance Survey Grid Reference",
     "shortName":"OS Grid ref",
-    "icon": "../unknown.png",
+    "icon": "../bangle.png",
     "version":"0.01",
     "description": "Displays the UK Ordnance Survey grid reference of your current GPS location. Useful when in the United Kingdom with an Ordnance Survey map",
     "tags": "outdoors,gps",
