--- a/apps.json
+++ b/apps.json
@@ -13,7 +13,7 @@
   "name": "Languages",
   "icon": "../bangle.png",
   "version":"0.07",
-  "description": "",
+  "description": "Translations for different countries",
   "tags": "",
   "storage": [
   ]
