--- a/apps.json
+++ b/apps.json
@@ -40,12 +40,7 @@
     "icon": "../bangle.png",
     "version":"0.06",
     "description": "Bangle.js About page - showing software version, stats, and a collaborative mural from the Bangle.js KickStarter backers",
-    "tags": "tool,system",
-    "allow_emulator":true,
-    "storage": [
-      {"name":"about.app.js","url":"app.js"},
-      {"name":"about.img","url":"app-icon.js","evaluate":true}
-    ]
+    "storage": []
   },
   { "id": "notify",
     "name": "Notifications (default)",
