--- a/apps.json
+++ b/apps.json
@@ -171,24 +171,27 @@
     "description": "Provides assistance while performing a CPR",
     "storage": []
   },
-  { "id": "calendar",
+  {
+    "id": "calendar",
     "name": "Calendar",
     "icon": "../bangle.png",
     "version": "0.01",
     "description": "Simple calendar",
     "storage": []
   },
-  { "id": "gpsnav",
+  {
+    "id": "gpsnav",
     "name": "GPS Navigation",
     "icon": "../bangle.png",
-    "version":"0.03",
+    "version": "0.03",
     "description": "Displays GPS Course and Speed, + Directions to waypoint and waypoint recording, now with waypoint editor",
     "storage": []
   },
-  { "id": "notify",
+  {
+    "id": "notify",
     "name": "Notifications (default)",
     "icon": "notify.png",
-    "version":"0.03",
+    "version": "0.03",
     "description": "A handler for displaying notifications that displays them in a bar at the top of the screen",
     "storage": []
   }
