--- a/apps.json
+++ b/apps.json
@@ -55,7 +55,7 @@
     "id": "gbridge",
     "name": "Gadgetbridge",
     "icon": "../bangle.png",
-    "version": "0.16",
+    "version": "0.17",
     "description": "The default notification handler for Gadgetbridge notifications from Android",
     "storage": []
   },
@@ -190,7 +190,7 @@
   {
     "id": "notify",
     "name": "Notifications (default)",
-    "icon": "notify.png",
+    "icon": "../bangle.png",
     "version": "0.03",
     "description": "A handler for displaying notifications that displays them in a bar at the top of the screen",
     "storage": []
