--- a/apps.json
+++ b/apps.json
@@ -20,6 +20,26 @@
     ]
   },
   {
+    "id": "tsoy_launcher",
+    "name": "Tsoy Launcher",
+    "icon": "app.png",
+    "version": "0.01",
+    "description": "Keine Beschreibung notwendig",
+    "allow_emulator": true,
+    "tags": "",
+    "storage": [
+      {
+        "name": "tsoy_launcher.app.js",
+        "url": "app.js"
+      },
+      {
+        "name": "tsoy_launcher.img",
+        "url": "app-icon.js",
+        "evaluate": true
+      }
+    ]
+  },
+  {
     "id": "locale",
     "name": "Languages",
     "icon": "../bangle.png",
