--- a/apps.json
+++ b/apps.json
@@ -1,7 +1,7 @@
 [
   {
-    "id": "tsoy_launcher",
-    "name": "Tsoy Launcher",
+    "id": "tsoy_ble",
+    "name": "Tsoy BLE",
     "icon": "app.png",
     "version": "0.01",
     "description": "Keine Beschreibung notwendig",
@@ -9,12 +9,33 @@
     "tags": "",
     "storage": [
       {
-        "name": "tsoy_launcher.app.js",
+        "name": "tsoy_ble.app.js",
         "url": "app.js"
       },
       {
-        "name": "tsoy_launcher.img",
-        "url": "app-icon.js",
+        "name": "tsoy_ble.img",
+        "url": "../tsoy_launcher/app-icon.js",
+        "evaluate": true
+      }
+    ]
+  },
+  {
+    "id": "tsoy_clock",
+    "name": "Tsoy Clock",
+    "icon": "app.png",
+    "version": "0.01",
+    "description": "Keine Beschreibung notwendig",
+    "allow_emulator": true,
+    "tags": "",
+    "type": "clock",
+    "storage": [
+      {
+        "name": "tsoy_clock.app.js",
+        "url": "app.js"
+      },
+      {
+        "name": "tsoy_clock.img",
+        "url": "../tsoy_launcher/app-icon.js",
         "evaluate": true
       }
     ]
